<?xml version="1.0"?>
<package>
  <name>moss_decision</name>
  <version>1.0.0</version>
  <description>The decision package</description>
  <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>base_msgs</build_depend>
  <build_depend>move</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moss_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>base_msgs</run_depend>
  <run_depend>move</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moss_msgs</run_depend>

</package>
