<?xml version="1.0"?>
<package>
  <name>moss_serial</name>
  <version>1.0.0</version>
  <description>The serial package</description>
  
  <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moss_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moss_msgs</run_depend>
  
</package>
